--- a/styles/scss/partials/_patients.scss
+++ b/styles/scss/partials/_patients.scss
@@ -4,7 +4,7 @@
   padding-left: 70px;
   padding-bottom: 300px;
 
-  background-image: url(../../../assets/img/bg6.svg);
+  background-image: url(bg6.svg);
 
   &__top {
     &__l1 {
