--- a/styles/scss/partials/_quote.scss
+++ b/styles/scss/partials/_quote.scss
@@ -1,5 +1,5 @@
 .quote {
-  background-image: url(../../../assets/img/bglast.svg);
+  background-image: url(bglast.svg);
   padding-right: 70px;
   padding-left: 70px;
 
