--- a/styles/scss/partials/_result.scss
+++ b/styles/scss/partials/_result.scss
@@ -3,7 +3,7 @@
   padding-left: 70px;
   padding-top: 62px;
 
-  background-image: url(../../../assets/img/background2.svg);
+  background-image: url(background2.svg);
   &__box {
     display: flex;
     flex-direction: column;
