--- a/styles/scss/partials/_symptoms.scss
+++ b/styles/scss/partials/_symptoms.scss
@@ -1,5 +1,5 @@
 .symptoms {
-  background-image: url(../../../assets/img/bg5.svg);
+  background-image: url(bg5.svg);
   &__top {
     display: flex;
     flex-direction: column;
