--- a/styles/scss/partials/_top.scss
+++ b/styles/scss/partials/_top.scss
@@ -1,5 +1,5 @@
 .top {
-  background-image: url("../../../assets/img/backImg.svg");
+  background-image: url("backImg.svg");
   padding: 20px 70px;
 }
 
