--- a/styles/scss/partials/_why.scss
+++ b/styles/scss/partials/_why.scss
@@ -1,5 +1,5 @@
 .why {
-  background-image: url(../../../assets/img/background3.svg);
+  background-image: url(background3.svg);
   padding: 20px 70px;
   display: flex;
   flex-direction: column;
