--- a/styles/scss/partials/_top.scss
+++ b/styles/scss/partials/_top.scss
@@ -1,5 +1,5 @@
 .top {
-  background-image: url("backImg.svg");
+  background-image: url('https://github.com/ashimrai123/Landing_Page/blob/49a886884735f82ee364e612fee69da440e29a35/styles/scss/partials/backImg.svg');
   padding: 20px 70px;
 }
 
