--- a/styles/scss/partials/_quote.scss
+++ b/styles/scss/partials/_quote.scss
@@ -1,5 +1,5 @@
 .quote {
-  background-image: url('https://drive.google.com/file/d/1Y1DD7tMwQVYBc-KJLonaQe543V0ZEQ7b/view?usp=sharing');
+  background-image: url('./bglast.SVG');
   padding-right: 70px;
   padding-left: 70px;
 
