--- a/styles/scss/partials/_vaccine.scss
+++ b/styles/scss/partials/_vaccine.scss
@@ -141,6 +141,10 @@
       line-height: normal;
       display: inline-flex;
       align-items: flex-start;
+      padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 5%;
+        padding-right: 5%;
       gap: 10px;
       border-radius: 20px;
       background: #17c2ec;
